# notch_chatbot

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  EMAIL_SETUP.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_STREAMLIT.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  streamlit_app.py  test_agent.py  test_concise.py  test_detailed.py  test_full_demo.py  test_memory.py  test_memory_simple.py  test_streaming.py  test_streamlit_imports.py  test_tools.py  verify_kb.py
.streamlit/: README.md  secrets.toml.example
data/: case_studies.json  expertise.json  services.json  use_cases.json
examples/: README.md  simple_usage.py
src/notch_chatbot/: __init__.py  agent.py  cli.py  knowledge_base.py  models.py  tools.py
tests/: README.md  __init__.py  conftest.py
tests/demo/: __init__.py  test_detailed.py  test_full_demo.py  test_memory_simple.py
tests/integration/: __init__.py  test_agent.py  test_concise.py  test_email_send.py  test_memory.py  test_streaming.py  test_tools.py
tests/unit/: test_offer_creation.py  test_streamlit_imports.py  verify_kb.py
