[project]
name = "notch-chatbot"
version = "0.1.0"
description = "AI chatbot for Notch software development agency"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.0",
    "httpx>=0.28.1",
    "pydantic-ai[openai]>=1.44.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
]

[project.scripts]
notch-chatbot = "notch_chatbot.cli:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = ["E", "F", "I", "W", "UP", "B"]
lint.ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
